# hktkzyx-toolbox-web

./: .gitignore  .style.yapf  app.py  pyproject.toml
hktkzyx_toolbox_web/: __init__.py  config.py  electronics.py  views.py
hktkzyx_toolbox_web/templates/: base.html  electronics.html  index.html
tests/: conftest.py  test_electronics.py  test_factory.py  test_views.py
